<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">myButler</string>"

    <!-- REGISTER UND LOGIN STRINGS -->
    <string name="first_name">Vorname</string>
    <string name="sur_name">Nachname</string>
    <string name="birth_date"> Geburtsdatum</string>
    <string name="email"> E-Mail</string>
    <string name="password"> Passwort</string>
    <string name="password_again">Passwort wiederholen</string>
    <string name="register">Registrieren</string>
    <string name="login">LogIn</string>
    <string name="noAccount">Ich habe noch kein Konto.</string>
    <string name="welcome">Willkommen bei myButler!</string>
    <string name="penguin">Pinguin</string>
    <string name="forgot_password">Passwort vergessen? ></string>
    <string name="license">Ich hab einen Führerschein!(Klasse B)</string>
    <string name="password_nomatch">Die eingegebenen Passwörter stimmen nicht überein, bitte versuchen sie es nochmal</string>
    <string name="password_sixchars">Das Passwort muss mindestens 6 Zeichen lang sein</string>
    <string name="reg_allfields">Bitte füllen Sie alle Felder aus</string>
    <string name="reg_success">Erfolgreich registriert</string>

    <!-- MENU STRING -->
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_settings">Einstellungen</string>

    <!-- PROFILE FRAGMENT STRINGS -->
    <string name="tasks">Aufträge</string>
    <string name="actual1">aktuelle</string>
    <string name="actual2">Auftrag</string>
    <string name="taskbtn">taskBtn</string>
    <string name="dienstleister">-Dienstleister-</string>
    <string name="lv">Lv</string>
    <string name="testName">Frank Burkistan</string>
    <string name="profilepic">profilePic</string>
    <string name="title_pic">title_Pic</string>


    <!-- HOME STRINGS -->
    <string name="welcome_home">Welcome</string>
    <string name="welcome_frank">Welcome Frank</string>
    <string name="_10">10</string>
    <string name="goodday">… Einen angenehmen Tag :)</string>
    <string name="butle">butle</string>
    <string name="_230">230</string>
    <string name="points">Points°</string>
    <string name="bremen_de">Bremen, DE</string>
    <string name="_28_c">28°C</string>
    <string name="stk">/ Stk</string>

    <!--FIREBASE STRINGS-->
    <string name="firebase_repository_tag">FirebaseRepository</string>
    <string name="register_new_user_success">Registrierung erfolgreich!</string>
    <string name="register_new_user_failure">Registrierung fehlgeschlagen: %1$s</string>
    <string name="login_success">Login erfolgreich!</string>
    <string name="login_failure">Login fehlgeschlagen: %1$s</string>
    <string name="logout_successful">Erfolgreich abgemeldet!</string>
    <string name="forgot_password_success">Passwort-Reset-E-Mail wurde gesendet!</string>
    <string name="forgot_password_failure">Fehler beim Senden der Passwort-Reset-E-Mail: %1$s</string>
    <string name="profile_upload_success">User Profil wurde erfolgreich hochgeladen</string>
    <string name="profile_upload_failure">Beim Speichern des User-Profiles ist ein Fehler aufgetreten: %1$s</string>
    <string name="task_upload_success">Task wurde erfolgreich hochgeladen und angelegt.</string>
    <string name="task_upload_failure">Beim Speichern des Tasks ist ein Fehler aufgetreten: %1$s</string>
    <string name="order_upload_success">Order wurde erfolgreich hochgeladen und angelegt.</string>
    <string name="order_upload_failure">Beim Speichern des Orders ist ein Fehler aufgetreten: %1$s</string>
    <string name="image_upload_success">Bild wurde erfolgreich auf Firestore hochgeladen</string>
    <string name="image_upload_failure">Bild konnte nicht hochgeladen werden: %1$s</string>
    <string name="profile_update_success">Profile erfolgreich aktualisiert</string>
    <string name="profile_update_failure">Beim Aktualisieren des Profiles ist ein Fehler aufgetreten: %1$s</string>
    <string name="status_update_success">Status erfolgreich aktualisiert</string>
    <string name="status_update_failure">Beim Aktualisieren des Status ist ein Fehler aufgetreten: %1$s</string>
    <string name="location_update_failure">Beim Aktualisieren des letzten Standorts ist ein Fehler aufgetreten: %1$s</string>



</resources>